About page is now responsive. Mobile menu shows on mobile with a CSS animation. Menu is opened and closed with classList.toggle() i've not had any browser issues with it yet Updated animations CSS. Nothing links out yet. There's no winter in Florida, save me.

--- a/css/home.css
+++ b/css/home.css
@@ -37,7 +37,6 @@ a {
     color: #FFFFFF;
     display: inline-block;
     width: 100%;
-    transition: .5s ease-out all;
 }
 
 .top-header a,
