--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,12 @@ nav a:hover {
    
 /*See home.css*/
 
+.menu-animation {
+    transition: .5s ease-out all;
+}
+
+
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
